--- a/manifest.json
+++ b/manifest.json
@@ -17,17 +17,17 @@
     "cookies"
   ],
   "host_permissions": [
-    "<all_urls>"
+    "*://*/*"
   ],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background.js",
+    "type": "module"
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": ["*://*/*"],
       "js": [
         "utils/resource-detector.js",
-        "utils/communication.js",
         "content.js"
       ],
       "css": ["content.css"],
@@ -35,8 +35,8 @@
     }
   ],
   "web_accessible_resources": [{
-    "resources": ["icons/*"],
-    "matches": ["<all_urls>"]
+    "resources": ["icons/*", "shared/*"],
+    "matches": ["*://*/*"]
   }],
   "options_page": "options/options.html",
   "action": {
