--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,18 +65,20 @@ jobs:
           echo "EXTENSION_VERSION=${VERSION}" >> $GITHUB_ENV
           echo "EXTENSION_ZIP=GDownloaderWebPlug-${VERSION}.zip" >> $GITHUB_ENV
       
-      - name: 上传构建产物
-        uses: actions/upload-artifact@v3
+      - name: 上传构建产物到Release
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: GDownloaderWebPlug-${{ env.EXTENSION_VERSION }}.zip
+          asset_name: GDownloaderWebPlug-${{ env.EXTENSION_VERSION }}.zip
+          tag: ${{ github.ref }}
+          overwrite: true
+          body: "Chrome扩展：GDownloader下载助手浏览器插件 v${{ env.EXTENSION_VERSION }}"
+      
+      - name: 上传构建产物为Artifact(非Release版本)
+        if: ${{ !startsWith(github.ref, 'refs/tags/') }}
+        uses: actions/upload-artifact@v2
         with:
           name: extension-package
-          path: GDownloaderWebPlug-${{ env.EXTENSION_VERSION }}.zip
-      
-      - name: 创建GitHub Release
-        if: startsWith(github.ref, 'refs/tags/')
-        uses: softprops/action-gh-release@v1
-        with:
-          files: GDownloaderWebPlug-${{ env.EXTENSION_VERSION }}.zip
-          draft: false
-          prerelease: false
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+          path: GDownloaderWebPlug-${{ env.EXTENSION_VERSION }}.zip 
