--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,17 +3,21 @@ name: 构建与发布Chrome扩展
 on:
   push:
     tags:
-      - 'v*' # 当推送带v开头的标签时触发，如v1.0.0
+      - 'v*'
     branches:
-      - main # 当推送到main分支时也会触发
+      - main 
 
 jobs:
   build:
     runs-on: ubuntu-latest
     
     steps:
-      - name: 检出代码
-        uses: actions/checkout@v3
+      - name: checkout-branch
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 
+          fetch-tags: true
+          submodules: recursive
       
       - name: 设置Node.js环境
         uses: actions/setup-node@v3
@@ -38,8 +42,6 @@ jobs:
           if [[ "$GITHUB_REF" != refs/tags/* ]]; then
             VERSION=$(date +'%Y%m%d%H%M%S')
           fi
-          
-          # 创建临时目录并复制所需文件
           mkdir -p build
           
           # 复制主要文件和目录
@@ -75,10 +77,3 @@ jobs:
           tag: ${{ github.ref }}
           overwrite: true
           body: "Chrome扩展：GDownloader下载助手浏览器插件 v${{ env.EXTENSION_VERSION }}"
-      
-      - name: 上传构建产物为Artifact(非Release版本)
-        if: ${{ !startsWith(github.ref, 'refs/tags/') }}
-        uses: actions/upload-artifact@v2
-        with:
-          name: extension-package
-          path: GDownloaderWebPlug-${{ env.EXTENSION_VERSION }}.zip 
